# appver

./: README.md  appver.sublime-project.example  pyproject.toml  requirements-dev.txt
appver/: __main__.py  appver.py  build_exe.py  version_file.py
